# auto-switch

./: Cargo.toml  v2ray.json
src/: main.rs
src/vmess/: mod.rs  outbound.rs  vmesssubscribeconfig.rs
